Task/Task-5/NETWORK ISOLATION/team-a-allow-same-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-allow-same-ns
  namespace: team-a
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
