Task/Task-5/NETWORK ISOLATION/team-b-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-b-deny-all
  namespace: team-b
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
